--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,25 @@ mip = "^1.14.2"
 streamlit-aggrid = "^0.3.3"
 
 [tool.poetry.dev-dependencies]
+pysen = "^0.10.2"
+black = "^22.12.0"
+flake8 = "^6.0.0"
+isort = "^5.11.4"
+mypy = "^0.991"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pysen]
+version = "0.10"
+
+[tool.pysen.lint]
+enable_black = true
+enable_flake8 = true
+enable_isort = true
+enable_mypy = false
+line_length = 210
+py_version = "py310"
+[[tool.pysen.lint.mypy_targets]]
+  paths = ["."]
